# kpal

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.dependabot/: config.yml
examples/: hello-world.rs
kpal-gpio-cdev/: Cargo.toml  README.md
kpal-gpio-cdev/src/: errors.rs  lib.rs
kpal-peripheral/: Cargo.toml
kpal-peripheral/examples/: basic-peripheral.rs  hello-world.rs
kpal-peripheral/src/: error.rs  lib.rs  utils.rs
kpal-plugin/: Cargo.toml  README.md
kpal-plugin/examples/: basic-plugin.rs
kpal-plugin/src/: constants.rs  errors.rs  ffi.rs  lib.rs  strings.rs
resources/docker/kpal_tester-linux-armv7/: Dockerfile  entrypoint.sh
resources/docker/rust-builder-linux-x86_64/: Dockerfile
resources/docker/rust-linux-x86_64/: Dockerfile
resources/docker/rust_cross_armv7-linux-x86_64/: Dockerfile
resources/schemas/: attribute.schema.json  library.schema.json  link.schema.json  peripheral.schema.json
src/: constants.rs  handlers.rs  lib.rs  models.rs  peripherals.rs  plugins.rs  routes.rs  server.rs  utils.rs
src/init/: database.rs  errors.rs  libraries.rs  library.rs  mod.rs  transmitters.rs
src/init/libraries/: errors.rs  mod.rs
src/integrations/: errors.rs  mod.rs
src/integrations/rest/: errors.rs  mod.rs  routes.rs
src/integrations/rest/handlers/: errors.rs  mod.rs
src/integrations/rest/schemas/: errors.rs  mod.rs
src/models/: database.rs  errors.rs  mod.rs
src/peripheral_manager/: mod.rs  vtable.rs
src/plugins/: driver.rs  errors.rs  executor.rs  init.rs  messaging.rs  mod.rs  scheduler.rs
src/plugins/executor/: errors.rs  mod.rs
src/web/: errors.rs  handlers.rs  mod.rs  routes.rs
src/web/handlers/: errors.rs  mod.rs
tests/: integration_tests.rs  patch_string_attributes.rs  pre_init_attributes.rs  user_api.rs  utils_integration.rs
tests/common/: mod.rs
tests/common/errors/: mod.rs
tests/common/requests/: mod.rs
