[package]
name = "kpal"
version = "0.1.0"
authors = ["Kyle M. Douglass <kyle.m.douglass@gmail.com>"]
edition = "2018"

[workspace]

members = [
    "./",
    "kpal-peripheral",
]

[dependencies]
kpal-peripheral= { path = "kpal-peripheral" }
dirs = "1.0"
env_logger = "0.6.1"
lazy_static = "1.3"
libc = "0.2"
libloading = "0.5"
log = "0.4"
redis = "0.10.0"
rouille = "3.0"
serde = "1.0"
serde_json = "1.0.39"
structopt = "0.2"
tempfile = "3.0"
url = "1.7"