[package]
name = "kpal"
version = "0.2.0"
authors = ["Kyle M. Douglass <kyle.douglass@protonmail.com>"]
edition = "2018"
description = "An extensible control system for physical computing"
repository = "https://github.com/kmdouglass/kpal"
readme = "README.md"
keywords = ["linux", "embedded", "kpal"]
categories = ["embedded", "hardware-support", "science"]
license-file = "LICENSE"

[workspace]

members = [
    "./",
    "kpal-plugin",
    "kpal-gpio-cdev",
]

[dependencies]
kpal-plugin = { path = "kpal-plugin", version = "0.2.0" }
dirs = "2.0"
env_logger = "0.6"
lazy_static = "1.3"
libc = "0.2"
libloading = "0.5"
log = "0.4"
memchr = "2.2"
rouille = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"
tempfile = "3.0"
url = "2.1"

[dev-dependencies]
reqwest = "0.9"