[package]
name = "kpal-plugin"
version = "0.3.0"
authors = ["kmdouglass <kyle.m.douglass@gmail.com>"]
edition = "2018"
description = "A library for writing new KPAL plugins"
repository = "https://github.com/kmdouglass/kpal"
readme = "README.md"
keywords = ["linux", "embedded", "kpal"]
categories = ["embedded", "hardware-support", "science"]
license-file = "../LICENSE"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.7"
libc = "0.2"
log = "0.4"
multi-map = "1.2"

[[example]]
name = "basic-plugin"
crate-type = ["cdylib"]
